--- a/packages/grid/src/scss/_global.scss
+++ b/packages/grid/src/scss/_global.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use "@uqds/core/src/scss/global" as core;
 
 // Grid schema
@@ -19,8 +21,8 @@ $max-container-width: 71.25rem !default;
  * Layout containment (breakpoint driven)
  */
 @mixin layout-containment {
-  margin-left: nth($schema-base, 3) - nth($schema-base, 2) / 2;
-  margin-right: nth($schema-base, 3) - nth($schema-base, 2) / 2;
+  margin-left: nth($schema-base, 3) - nth($schema-base, 2) * 0.5;
+  margin-right: nth($schema-base, 3) - nth($schema-base, 2) * 0.5;
 
   // TODO: if we can perform the following checks on the parent element width
   // instead of the viewport width, we can achieve a more friendlier to use
@@ -36,8 +38,8 @@ $max-container-width: 71.25rem !default;
   }
 
   @media #{core.$screen-md-up} {
-    margin-left: nth($schema-md, 3) - nth($schema-md, 2) / 2;
-    margin-right: nth($schema-md, 3) - nth($schema-md, 2) / 2;
+    margin-left: nth($schema-md, 3) - nth($schema-md, 2) * 0.5;
+    margin-right: nth($schema-md, 3) - nth($schema-md, 2) * 0.5;
     max-width: none;
   }
   
@@ -49,8 +51,8 @@ $max-container-width: 71.25rem !default;
   }
 
   @media (min-width: #{core.$screen-xl}) {
-    margin-left: nth($schema-xl, 3) - nth($schema-xl, 2) / 2;
-    margin-right: nth($schema-xl, 3) - nth($schema-xl, 2) / 2;
+    margin-left: nth($schema-xl, 3) - nth($schema-xl, 2) * 0.5;
+    margin-right: nth($schema-xl, 3) - nth($schema-xl, 2) * 0.5;
     max-width: none;
   }
 
@@ -66,18 +68,18 @@ $max-container-width: 71.25rem !default;
  * For nested containers (reverses layout-containment)
  */
 @mixin layout-nested {
-  margin-left: -(nth($schema-base, 2) / 2);
-  margin-right: -(nth($schema-base, 2) / 2);
+  margin-left: -(nth($schema-base, 2) * 0.5);
+  margin-right: -(nth($schema-base, 2) * 0.5);
   max-width: none;
 
   @media #{core.$screen-md-up} {
-    margin-left: -(nth($schema-md, 2) / 2);
-    margin-right: -(nth($schema-md, 2) / 2);
+    margin-left: -(nth($schema-md, 2) * 0.5);
+    margin-right: -(nth($schema-md, 2) * 0.5);
   }
 
   @media #{core.$screen-xl-up} {
-    margin-left: -(nth($schema-xl, 2) / 2);
-    margin-right: -(nth($schema-xl, 2) / 2);
+    margin-left: -(nth($schema-xl, 2) * 0.5);
+    margin-right: -(nth($schema-xl, 2) * 0.5);
   }
 }
 
@@ -95,22 +97,22 @@ $max-container-width: 71.25rem !default;
   $columns,
   $column-count: nth($schema-base, 1)) {
 
-  @return percentage($columns / $column-count);
+  @return percentage(math.div($columns, $column-count));
 }
 
 /* Padding to make up gaps/gutters (horizonal) */
 @mixin grid-col-padding {
-  padding-left: nth($schema-base, 2) / 2;
-  padding-right: nth($schema-base, 2) / 2;
+  padding-left: nth($schema-base, 2) * 0.5;
+  padding-right: nth($schema-base, 2) * 0.5;
 
   @media #{core.$screen-md-up} {
-    padding-left: nth($schema-md, 2) / 2;
-    padding-right: nth($schema-md, 2) / 2;
+    padding-left: nth($schema-md, 2) * 0.5;
+    padding-right: nth($schema-md, 2) * 0.5;
   }
 
   @media #{core.$screen-xl-up} {
-    padding-left: nth($schema-xl, 2) / 2;
-    padding-right: nth($schema-xl, 2) / 2;
+    padding-left: nth($schema-xl, 2) * 0.5;
+    padding-right: nth($schema-xl, 2) * 0.5;
   }
 }
 
@@ -118,7 +120,7 @@ $max-container-width: 71.25rem !default;
  * Map columns to another base
  */
 @function calc-true-colspan($span, $column-count, $shadow-column-count) {
-  @return round(($shadow-column-count / $column-count) * $span); 
+  @return round(math.div($shadow-column-count, $column-count) * $span); 
 }
 
 /**
@@ -283,32 +285,32 @@ $max-container-width: 71.25rem !default;
 
 /* Padding to make up gaps/gutters (vertical) */
 @mixin _grid-col-v-padding {
-  padding-top: nth($schema-base, 2) / 2;
-  padding-bottom: nth($schema-base, 2) / 2;
+  padding-top: nth($schema-base, 2) * 0.5;
+  padding-bottom: nth($schema-base, 2) * 0.5;
 
   @media #{core.$screen-md-up} {
-    padding-top: nth($schema-md, 2) / 2;
-    padding-bottom: nth($schema-md, 2) / 2;
+    padding-top: nth($schema-md, 2) * 0.5;
+    padding-bottom: nth($schema-md, 2) * 0.5;
   }
 
   @media #{core.$screen-xl-up} {
-    padding-top: nth($schema-xl, 2) / 2;
-    padding-bottom: nth($schema-xl, 2) / 2;
+    padding-top: nth($schema-xl, 2) * 0.5;
+    padding-bottom: nth($schema-xl, 2) * 0.5;
   }
 }
 
 /* Margins to normalise the gaps/gutter offset (vertical) */
 @mixin _grid-row-v-margins {
-  margin-top: -(nth($schema-base, 2) / 2);
-  margin-bottom: -(nth($schema-base, 2) / 2);
+  margin-top: -(nth($schema-base, 2) * 0.5);
+  margin-bottom: -(nth($schema-base, 2) * 0.5);
 
   @media #{core.$screen-md-up} {
-    margin-top: -(nth($schema-md, 2) / 2);
-    margin-bottom: -(nth($schema-md, 2) / 2);
+    margin-top: -(nth($schema-md, 2) * 0.5);
+    margin-bottom: -(nth($schema-md, 2) * 0.5);
   }
 
   @media #{core.$screen-xl-up} {
-    margin-top: -(nth($schema-xl, 2) / 2);
-    margin-bottom: -(nth($schema-xl, 2) / 2);
+    margin-top: -(nth($schema-xl, 2) * 0.5);
+    margin-bottom: -(nth($schema-xl, 2) * 0.5);
   }
 }
