--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -10,7 +10,7 @@
 
     &__reconciliation {
       background:#000;
-      background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/rap-artwork.png");
+      background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/brisbane-river-artwork.png");
       /*background-repeat: no-repeat;*/
     }
 
