--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -10,12 +10,12 @@
 
     &__reconciliation {
       background:#000;
-      background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/brisbane-river-artwork.png");
+      background-image: linear-gradient(90deg, rgba(81, 36, 122, .7), rgba(81, 36, 122, .7)), url("../images/brisbane-river-artwork.png");
       /*background-repeat: no-repeat;*/
     }
 
     &__acknowledgement {
-      max-width:650px;
+      max-width: 73.25rem;
       padding: 2.5rem;
       color: #d4c8de;
       font-family: "Merriweather",Georgia,serif;
@@ -442,16 +442,11 @@
       margin-right:auto;
       max-width:73.25rem;
     }
-    .new-footer__reconciliation {
-    background:#000;
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.0) 400px, rgba(0, 0, 0, 1) 640px), url("../images/brisbane-river-artwork.png");
-    /*background-repeat: no-repeat;*/
-    }
     .new-footer__acknowledgement {
       position: relative;
-      max-width:1140px;
+      max-width: 73.25rem;
       margin: auto;
-      padding: 60px 60px 60px 426px;
+      padding: 2.5rem 1rem;
       color: #d4c8de;
       font-family: "Merriweather",Georgia,serif;
       font-style: italic;
