added has-dropdown variant to homepage menuand updated styles to reflect

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -205,9 +205,17 @@
       text-decoration: none;
     }
 
+
     @media #{core.$screen-lg-up} {
-      padding: 2rem 2.75rem 2rem 1.5rem;
+      padding: 2rem;
     }
+
+  }
+
+  .main-nav-link--has-dropdown {
+
+    padding: 2rem 2.75rem 2rem 1.5rem;
+
 
     &::after {
       content: "";
