updated slider icons and fonts

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -585,6 +585,7 @@ body.no-scroll {
 
   .slide-menu .slide-menu__backlink {
      /* text-transform:uppercase; */
+     font-weight: 500;
   }
   #test-menu-left p {
       font-size:110%;
