--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -1,4 +1,5 @@
 @use '@uqds/core/src/scss/global' as core;
+@use "@uqds/icon/src/scss/global" as icon-constants;
 @use '@uqds/grid/src/scss/global' as grid;
 @use 'global' as *;
 
@@ -54,15 +55,22 @@
 
   &__search-toggle {
     grid-area: searchtoggle;
+    height: 100%;
+
+    @media #{core.$screen-lg-up} {
+      height: auto;
+    }
   }
 
   & .main-nav__toggle {
     background: none;
     border: none;
-    padding: 1.5rem;
+    padding: 1.5rem 2rem;
+    height: 100%;
 
     @media #{core.$screen-lg-up} {
-      padding: 1rem;
+      padding: 1rem 1.25rem 1rem 2.75rem;
+      height: auto;
     }
   }
 
@@ -87,23 +95,34 @@
   & .main-nav__search-toggle {
     cursor: pointer;
     color: #fff;
+    position: relative;
 
-    & .uq-icon--standard--search {
-      display: flex;
-    }
-    & .uq-icon--standard--close {
-      display: none;
-    }
+    // & .uq-icon--standard--search {
+    //   display: flex;
+    // }
+    // & .uq-icon--standard--close {
+    //   display: none;
+    // }
 
-    @media #{core.$screen-lg-up} {
-      display: flex;
-      align-items: center;
-      width: 100%;
+    &::before {
+      content: "";
+      background-image: url(icon-constants.get-icon("standard--search", core.$uq-white));
+      background-repeat: no-repeat;
+      width: 1.25rem;
+      height: 1.25rem;
+      transform: translate(50%, 50%);
+      position: absolute;
+      top: .75rem;
+      right: 2rem;
+      
+      @media #{core.$screen-lg-up} {
+        top: .25rem;
+        left: .5rem;
+      }
     }
 
     &:hover {
       background-color: #48206c;
-      text-decoration: underline;
       outline: none;
     }
 
@@ -219,14 +238,15 @@
 
     &::after {
       content: "";
-      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m7 10 5 5 5-5' stroke='%23FFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+      background-image: url(icon-constants.get-icon("standard--chevron-down", core.$uq-white));
+      //background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m7 10 5 5 5-5' stroke='%23FFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
       // background-size: 0.6rem;
       background-repeat: no-repeat;
       width: 1rem;
       height: 1rem;
       transform: translateY(50%);
       position: absolute;
-      top: 1.65rem;
+      top: 1.7rem;
       right: 1.75rem;
 
       @media #{core.$screen-lg-up} {
